<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">
            <!--app:cardBackgroundColor="@color/cardView_background"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/backgroundColor">
                <EditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/white"
                    android:importantForAutofill="no" tools:targetApi="P" />
                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/white"
                    android:importantForAutofill="no" tools:targetApi="P" />
                <EditText
                    android:id="@+id/password_edittext1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    android:importantForAutofill="no" tools:targetApi="P" />
                <EditText
                    android:id="@+id/password_edittext2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    android:importantForAutofill="no" tools:targetApi="P" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:hint="@string/age"
                        android:id="@+id/age_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:textColorHint="@android:color/white" />

                    <CheckBox
                        android:id="@+id/checkbox_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txtMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@android:color/white"
                        />
                    <CheckBox
                        android:id="@+id/checkbox_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txtFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/custom_signup_button"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:tag="custom_signup_button"
                        android:text="@string/sign_up_button"
                        android:textColor="@android:color/white" />
                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>
</RelativeLayout>