<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/backgroundColor">

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="5dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="ersin@gmail.com"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="123456"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/custom_signin_button"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:tag="custom_login_button"
                        android:text="@string/sing_in_button"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/custom_signup_button"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:tag="custom_signup_button"
                        android:text="@string/sign_up_button"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>